css/interface.css
body {
  overflow: hidden;
}

section,
.appLinkFields {
  display: none;
}

#link-action,
.form-horizontal {
  overflow: hidden;
}

.spinner-holder {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 2;
  justify-content: center;
  align-items: center;
}

.spinner-holder.animated {
  display: flex !important;
}

.spinner-holder.animated + .link-wrapper {
  opacity: 0.5;
  pointer-events: none;
}

#query-form {
  height: 0;
  opacity: 0;
  overflow: hidden;
  margin-bottom: 0;
  -webkit-transition: all 0.25s ease-out;
  -moz-transition: all 0.325s ease-out;
  -o-transition: all 0.25s ease-out;
  transition: all 0.25s ease-out;
  -webkit-transform: translate(0, -10px);
  -moz-transform: translate(0, -10px);
  -o-transform: translate(0, -10px);
  transform: translate(0, -10px);
}

#screen-form.show-query #query-form {
  display: block;
  opacity: 1;
  overflow: auto;
  height: auto;
  margin-bottom: 15px;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -o-transform: translate(0, 0);
  transform: translate(0, 0);
}

.file-title {
  display: inline-block;
  margin-left: 10px;
  height: 46px;
  line-height: 46px;
}

.info-holder .btn-link {
  margin-left: 10px;
}

.info-holder .btn-link.text-danger {
  color: #e03629 !important;
}

.info-holder .btn-link.text-danger:active:focus,
.info-holder .btn-link.text-danger:active:hover,
.info-holder .btn-link.text-danger:focus,
.info-holder .btn-link.text-danger:hover {
  color: #a94442 !important;
}

.variables {
  background-color: #f8f6f7;
  padding: 10px;
}

.variable-row {
  display: flex;
  align-items: flex-start;
  column-gap: 8px;
}

.variable-row .info-holder {
  color: #b73750;
}

.text-success {
  line-height: 1;
}

